add new article

--- a/about/关于我/index.html
+++ b/about/关于我/index.html
@@ -92,8 +92,8 @@
 <p>未完待续。。。。。。</p>
 <h2 id="欢迎交流"><strong>欢迎交流</strong></h2>
 <p>Q Q ：860366673</p>
-<p>微博：<a href="https://weibo.com/5375103795/profile?topnav=1&amp;wvr=6&amp;is_all=1&amp;sudaref=landforcer.com&amp;display=0&amp;retcode=6102&amp;sudaref=passport.weibo.com">landforcer</a></p>
-<p>B 站：<a href="https://space.bilibili.com/398228976">landforcer</a></p>
+<p>微博：<a href="https://weibo.com/u/5375103795?topnav=1&amp;wvr=6&amp;topsug=1&amp;is_all=1">landforcer</a></p>
+<p>B 站：<a href="https://space.bilibili.com/398228976?from=search&amp;seid=15472833354431902085">landforcer</a></p>
 <p>网易云：<a href="https://music.163.com/#/user/home?id=510529666">landforcer</a></p>
 <p>邮箱 ：landforcer@163.com</p>
 
