--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en-us" itemscope itemtype="http://schema.org/WebPage">
   <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
   <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="A blog about everything." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://landforcer.com/404.html" />
+<meta property="og:url" content="https://landrorcer.com/404.html" />
 
 
   
@@ -51,7 +51,7 @@
     
       <nav>
   <a href="/" title="Homepage">
-    landforcer
+    Simplicity
   </a>
 </nav>
 
