--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en-us" itemscope itemtype="http://schema.org/WebPage">
   <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
   <meta property="og:title" content="Simplicity - Hugo theme" />
 <meta property="og:description" content="A blog about everything." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://landforcer.com/" />
+<meta property="og:url" content="https://landrorcer.com/" />
 
 
   
